force-app/main/default/objects/Rule__c/fields/Advance_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Advance_Workflow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advance Workflow</label>
    <referenceTo>Advance_Workflow__c</referenceTo>
    <relationshipLabel>Rules</relationshipLabel>
    <relationshipName>Rules</relationshipName>
    <type>Lookup</type>
</CustomField>