force-app/main/default/objects/Rule__c/fields/AdvanceWorkflow__c.field-meta.xml
<CustomField>
    <fullName>AdvanceWorkflow__c</fullName>
    <formula>IF( ISBLANK(Advance_Workflow__c  ),null, HYPERLINK(&quot;apex/AW_ListRules_VF?id=&quot; &amp; Advance_Workflow__c, Advance_Workflow__r.Name))</formula>
    <label>Advance Workflow</label>
    <type>Text</type>
</CustomField>