force-app/main/default/objects/Rule__c/fields/DisplayfilterLogic__c.field-meta.xml
<CustomField>
    <fullName>DisplayfilterLogic__c</fullName>
    <description>Captures  logic expression  using the fileds of the defined rule criteria as operands ( rule criteria ) For Example : if a rule had 3 criteria : Criteria 1 ( Industry  =   &apos;Banking&apos; ) , Criteria 2 (Country=&apos;United States&apos;) , Criteria 3 (Type=&apos;Active&apos;  ) the Display Filter logic for  : Criteria  1 AND Criteria  2 OR Criteria  3   would be   Industry  =   &apos;Banking&apos; AND Country=&apos;United States&apos; OR Type=&apos;Active&apos;
During save the DisplayfilterLogic is calculated based on the value captured on  the Filter_Logic value ( 1 AND 2 OR 3 ) The calcuation derives the field name of the rule criteria  for the positional operators. The field is used for display purposes  to the user</description>
    <label>Rule Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>