force-app/main/default/objects/Rule__c/fields/Evaluation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Rule__c</fullName>
    <label>Evaluation Rule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Record is created or edited and did not previously meet the rule criteria</fullName>
            </value>
            <value>
                <fullName>Record is created</fullName>
            </value>
            <value>
                <fullName>Record is created or edited</fullName>
            </value>
            <value>
                <fullName>On Click Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>