force-app/main/default/objects/Rule__c/fields/Execution_Behavior__c.field-meta.xml
<CustomField>
    <fullName>Execution_Behavior__c</fullName>
    <label>Execution Behavior</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Execute Rule and Continue to Next Rule</fullName>
            </value>
            <value>
                <fullName>Execute Rule and Exit</fullName>
                <default>true</default>
                <label>Execute Rule and Exit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>