force-app/main/default/objects/Rule__c/fields/Filter_Logic__c.field-meta.xml
<CustomField>
    <fullName>Filter_Logic__c</fullName>
    <description>Captures the logic based on position of the rule criteria For Example : if a rule had 3 criteria : Criteria 1, Criteria 2, Criteria 3  the Filter logic could be : 1 AND 2 OR 3</description>
    <inlineHelpText>Captures the logic based on position of the rule criteria For Example : if a rule had 3 criteria : Criteria 1, Criteria 2, Criteria 3  the Filter logic could be : 1 AND 2 OR 3</inlineHelpText>
    <label>Filter Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>