force-app/main/default/objects/Rule__c/fields/FormattedFilterLogic__c.field-meta.xml
<CustomField>
    <fullName>FormattedFilterLogic__c</fullName>
    <description>Captures  logic expression  using the Salesforce Unique IDs of the defined rule criteria as operands ( rule criteria ) For Example : if a rule had 3 criteria : Criteria 1 (a0NA000000Rt5nTMAR ) , Criteria 2 (a0NA000000Rt5nYMAR ) , Criteria 3 (a0NA000000Rt5nYMAR  ) the Formatted Filter logic for  : Criteria  1 AND Criteria  2 OR Criteria  3   would be  a0NA000000Rt5nTMAR AND a0NA000000Rt5nYMAR OR a0NA000000Rt5nnMAB
During save the FormatedFilterLogic is calculated based on the value captured on  the Filter_Logic value ( 1 AND 2 OR 3 ) The calcuation derives the SFDC id for the positional operators. The field is used hidden to the user and serves to &quot;map&quot; the logic expression with the criteria records</description>
    <label>FormattedFilterLogic</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>