force-app/main/default/objects/Rule__c/fields/Import_Code__c.field-meta.xml
<CustomField>
    <fullName>Import_Code__c</fullName>
    <label>Import Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>