force-app/main/default/objects/Rule__c/fields/Total_Actions__c.field-meta.xml
<CustomField>
    <fullName>Total_Actions__c</fullName>
    <label>Total Actions</label>
    <summaryForeignKey>RuleAction__c.Rule__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>