force-app/main/default/objects/Rule__c/fields/Total_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Total_Criteria__c</fullName>
    <label>Total Criteria</label>
    <summaryForeignKey>RuleCriteria__c.Rule__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>