force-app/main/default/objects/Rule__c/fields/Total_Cross_Formula_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Total_Cross_Formula_Criteria__c</fullName>
    <label>Total Cross Formula Criteria</label>
    <summaryFilterItems>
        <field>RuleCriteria__c.Field_API_Name__c</field>
        <operation>equals</operation>
        <value>CrossFormula</value>
    </summaryFilterItems>
    <summaryForeignKey>RuleCriteria__c.Rule__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>