force-app/main/default/objects/Rule__c/fields/Total_Cross_Reference_Field_Action__c.field-meta.xml
<CustomField>
    <fullName>Total_Cross_Reference_Field_Action__c</fullName>
    <label>Total Cross Reference Field Action</label>
    <summaryFilterItems>
        <field>RuleAction__c.Field_API_Name__c</field>
        <operation>equals</operation>
        <value>CrossObject</value>
    </summaryFilterItems>
    <summaryForeignKey>RuleAction__c.Rule__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>