force-app/main/default/objects/Rule__c/fields/Total_Email_Action__c.field-meta.xml
<CustomField>
    <fullName>Total_Email_Action__c</fullName>
    <label>Total Email Action</label>
    <summaryFilterItems>
        <field>RuleAction__c.Type__c</field>
        <operation>equals</operation>
        <value>Send Email</value>
    </summaryFilterItems>
    <summaryForeignKey>RuleAction__c.Rule__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>