force-app/main/default/objects/Rule__c/fields/Total_Update_Merge_Action__c.field-meta.xml
<CustomField>
    <fullName>Total_Update_Merge_Action__c</fullName>
    <label>Total Update Merge Action</label>
    <summaryFilterItems>
        <field>RuleAction__c.Type__c</field>
        <operation>equals</operation>
        <value>Update Field</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>RuleAction__c.DisplayValue__c</field>
        <operation>startsWith</operation>
        <value>{!</value>
    </summaryFilterItems>
    <summaryForeignKey>RuleAction__c.Rule__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>