force-app/main/default/objects/Rule__c/recordTypes/Generic.recordType-meta.xml
<RecordType>
    <fullName>Generic</fullName>
    <active>true</active>
    <label>Generic Rule</label>
</RecordType>