force-app/main/default/objects/Rule__c/validationRules/CannotAddRuleToAvailableAdvanceWorkflow.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotAddRuleToAvailableAdvanceWorkflow</fullName>
    <active>true</active>
    <description>User will NOT be able to add additional rules to the available Workflow if Workflow  is disabled</description>
    <errorConditionFormula>ISCHANGED(Advance_Workflow__c) &amp;&amp;! Advance_Workflow__r.Enabled__c</errorConditionFormula>
    <errorMessage>New rules cannot be added to a disabled  Workflow</errorMessage>
</ValidationRule>