force-app/main/default/objects/Rule__c/validationRules/Description_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_is_required</fullName>
    <active>true</active>
    <description>Description_is_required</description>
    <errorConditionFormula>ISBLANK(Description__c )</errorConditionFormula>
    <errorMessage>Description is required</errorMessage>
</ValidationRule>