force-app/main/default/objects/Rule__c/validationRules/Evaluation_Rule_Can_not_be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Evaluation_Rule_Can_not_be_Blank</fullName>
    <active>true</active>
    <description>Evaluation Rule Criteria is blank</description>
    <errorConditionFormula>ISBLANK(TEXT(Evaluation_Rule__c ))</errorConditionFormula>
    <errorMessage>Evaluation Rule Criteria is blank</errorMessage>
</ValidationRule>